The same flow -> isomorphic flows

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -442,7 +442,7 @@ Given two derivations
  \vlsbr(\vlinf{}{}{\vls[a_1.\bar a_1]}{\ttt}\;.\;\cdots\;.\;\vlinf{}{}{\vls[a_n.\bar a_n]}{\ttt}\;.\;\alpha)
 }\quad,
 \]
-for some atoms $a_1,\dots,a_n,b_1,\dots,b_m$, such that $\Phi$ and $\Psi$ have the same atomic flow, we say that $\Psi$ is an \emph{$\ai$-decomposed form of\/ $\Phi$}\index{$\ai$-decomposed form}.
+for some atoms $a_1,\dots,a_n,b_1,\dots,b_m$, such that $\Phi$ and $\Psi$ have isomorphic flows, we say that $\Psi$ is an \emph{$\ai$-decomposed form of\/ $\Phi$}\index{$\ai$-decomposed form}.
 \end{definition}
 
 \begin{convention}\label{convention:AlternativeAiDecomposedForm}
