--- a/global_reductions/multiple_isolated_subflow.tex
+++ b/global_reductions/multiple_isolated_subflow.tex
@@ -484,14 +484,16 @@ Given the atoms, formulae and derivations described in Definition~\vref{definiti
 \end{enumerate}
 \end{proposition}
 
+\Tom{Fixed typo in second case:}
+
 \begin{proof}
-If $\Phi$ is weakly streamlined to some atom from $a_1$, $\dots$, $a_n$, the result follows by induction. Assume $\Phi$ is not weakly streamlined to any atom from $a_1$, $\dots$, $a_n$, and let $\phi$, $\psi_1$, $\dots$, $\psi_n$, $\phi'$, $\psi'_1$, $\dots$, $\psi'_n$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:MultipleIsolatedSubflowsRemover}, then
+If $\Phi$ is weakly streamlined with respect to some atom from $a_1$, $\dots$, $a_n$, the result follows by induction. Assume $\Phi$ is not weakly streamlined with respect to any atom from $a_1$, $\dots$, $a_n$, and let $\phi$, $\psi_1$, $\dots$, $\psi_n$, $\phi'$, $\psi'_1$, $\dots$, $\psi'_n$ and $\psi''$ be the flows given in Definition~\vref{definition:MultipleIsolatedSubflowsRemover}, then
 \begin{enumerate}
 \item by definition there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$. By Lemma~\vref{lemma:MultipleIsolatedSubflowsRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$. Hence, the statement follows by contradiction;
 \item
 \begin{enumerate}
- \item if there is a path from an interaction (resp., cut) vertex in the atomic flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ whose edges are mapped to from $b$, then, by Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths}, there is a path from an interaction (resp., cut) vertex in $\phi$, so also in $\phi'$, whose edges are mapped to from $b$. Hence, the statement follows by contradiction; and
- \item if there is an interaction (reps., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the atomic flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$, then, by Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths}, there is an interaction (reps., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$. Furthermore, since we can assume that $b$ is not any of $a_1$, $\dots$, $a_n$ or their duals, $\phi$ restricted to $b$ equals $\phi'$ restricted to $b$. Hence, the statement follows by contradiction.
+ \item if the flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ contains a path from an interaction vertex to a cut vertex whose edges are mapped to from $b$, then, by Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths}, there is a path from an interaction vertex to a cut vertex in $\phi$, so also in $\phi'$, whose edges are mapped to from $b$. Hence, the statement follows by contradiction; and
+ \item if there is an interaction (reps., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$, then, by Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths}, there is an interaction (resp., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$. Furthermore, since we can assume that $b$ is not any of $a_1$, $\dots$, $a_n$ or their duals, $\phi$ restricted to $b$ equals $\phi'$ restricted to $b$. Hence, the statement follows by contradiction.
 \end{enumerate}
 \item the statement follows by Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval}.
 \end{enumerate}
