--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -110,6 +110,8 @@ Given a polarity assignment $\pi$, a flow that is weakly streamlined with respec
 A streamlined flow with no pair of upper (resp., lower) edges such that there is an $\ai$-path between them, contains no cut (resp., axiom) vertices.
 \end{proposition}
 
+\TODO{$\KS$!}
+
 The following proposition makes the connection between cut elimination and streamlining. We consider the special case of atomic flows of proofs, \emph{i.e.}, atomic flows without upper edges, and observe that a streamlined proof is cut free and a hyper streamlined proof is a proof in system $\KS$.
 
 %---------------------------------------
