--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -72,7 +72,7 @@ all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the prem
 \TODO{}
 \end{proof}
 
-\TODO{Macro for ``mapped from occurences of''.}
+\TODO{Macro for ``mapped from occurrences of''.}
 
 %---------------------------------------
 \begin{definition}\label{definition:AssociatedFlow}
@@ -370,7 +370,7 @@ We can then distinguish between the three occurrences of $\bar a$ that are mappe
 \]
 we can also substitute for these occurrences, for example by $\{\bar a^\one/\fff\}$; such a situation occurs in the proof of Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}. Note that simply substituting $\fff$ for $\bar a^\one$ would invalidate this derivation because it would break the cut and weakening instances; however, the proof of Theorem~\ref{theorem:SoundIsolatedSubflowRemoval} specifies how to fix the broken cut instance and Proposition~\vref{proposition:DerivationSubstitution} specifies how to fix the broken weakening.
 
-We generalise this labelling mechanism to boxes. For example, we can use a different representation of the flow of $\Phi$ to individuate two classes $a^\phi$ and $\bar a^\phi$ of atom occurences, as follows:
+We generalise this labelling mechanism to boxes. For example, we can use a different representation of the flow of $\Phi$ to individuate two classes $a^\phi$ and $\bar a^\phi$ of atom occurrences, as follows:
 \[
 \Phi=
 \vlsbr[\vlderivation                                                        {
@@ -394,7 +394,7 @@ Given a derivation\/ $\vlder\Phi\SKS{\beta}\alpha$, let its associated flow have
 \[
 \vcenter{\hbox{\includegraphics{Figures/propSubst1}}}\quad,
 \]
-such that $\phi$ is a connected component whose edges are each associated with occurences of the atom $a$; then, for any formula $\gamma$, there exists a derivation
+such that $\phi$ is a connected component whose edges are each associated with occurrences of the atom $a$; then, for any formula $\gamma$, there exists a derivation
 \[
 \vlder\Psi\SKS{\beta \{a^\phi/\gamma\}}
               {\alpha\{a^\phi/\gamma\}}
