--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -2,9 +2,9 @@
 
 Given a derivation $\Phi$ in simple form with respect to an atom $a$, the operator, $\ISR$, defined in this section produces a derivation with the same premiss and conclusion as $\Phi$, which is weakly streamlined with respect to $a$.
 
-\Tom{occurences of}
+\Tom{occurrences of}
 
-We will see later how a derivation containing occurences of $n$ atoms can be weakly streamlined by two applications of $\Simpl$ and $n$ applications of $\ISR$. This is the most basic procedure for obtaining a weakly streamlined derivation, in particular it only deals with one atom at a time. In the following sections we will see how we can deal with several atoms in parallell.
+We will see later how a derivation containing occurrences of $n$ atoms can be weakly streamlined by two applications of $\Simpl$ and $n$ applications of $\ISR$. This is the most basic procedure for obtaining a weakly streamlined derivation, in particular it only deals with one atom at a time. In the following sections we will see how we can deal with several atoms in parallell.
 
 The operator is defined in terms of the following flow reduction.
 
